--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - DISPLAY=:1.0
       - USER=root
     volumes:
-      - /home/$USER/mrg_ws:/root/mrg_ws # Replace <PATH_GOES_HERE> with the path to your mrg_ws folder (If you cloned it to your home directory in WSL this would be /home/$USER/mrg_ws)
+      - /home/mwoodward/mrg_ws:/root/mrg_ws # Replace <PATH_GOES_HERE> with the path to your mrg_ws folder (If you cloned it to your home directory in WSL this would be /home/$USER/mrg_ws)
     ports:
       - 6080:80
       - 5900:5900
