--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
----
-version: "2"
 services:
   mrg:
-    image: mwoodward6/mrg:humble
+    image: mwoodward6/mrg:jazzy
     container_name: mrg
     environment:
       - DISPLAY=:1.0
@@ -11,7 +9,6 @@ services:
       - <PATH_GOES_HERE>:/root/mrg_ws # Replace <PATH_GOES_HERE> with the path to your mrg_ws folder (If you cloned it to your home directory in WSL this would be /home/$USER/mrg_ws)
     ports:
       - 6080:80
-      - 5900:5900
       - 9090:9090
       - 8080:8080
     tty: true
