--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   mrg:
-    image: mwoodward6/mrg:jazzy
+    image: jeff300fang/mrg:jazzy_tutorial
     container_name: mrg
     environment:
       - DISPLAY=:1.0
       - USER=root
     volumes:
-      - <PATH_GOES_HERE>:/root/mrg_ws # Replace <PATH_GOES_HERE> with the path to your mrg_ws folder (If you cloned it to your home directory in WSL this would be /home/$USER/mrg_ws)
+      - /var/mrg/tutorial_ws:/root/mrg_ws
     ports:
       - 127.0.0.1:6080:80
       - 9090:9090
