Add startup script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - DISPLAY=:1.0
       - USER=root
     volumes:
-      - /var/mrg/tutorial_ws:/root/mrg_ws
+      - ${HOME}/mrg/tutorial_ws:/root/mrg_ws
     ports:
       - 127.0.0.1:6080:80
       - 9090:9090
