Fix bug and rename container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   mrg:
     image: jeff300fang/mrg:jazzy_tutorial
-    container_name: mrg
+    container_name: mrg_tutorial
     environment:
       - DISPLAY=:1.0
       - USER=root
     volumes:
-      - /var/mrg/tutorial_ws:/root/mrg_ws
+      - ${HOME}/mrg/tutorial_ws:/root/mrg_ws
     ports:
       - 127.0.0.1:6080:80
       - 9090:9090
